; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslog_call.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslog_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i32, i32)* @vfslog_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vfslog_call(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_3__*, align 8
  %16 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = bitcast i32* %17 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %18, %struct.TYPE_3__** %15, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = add nsw i32 24, %21
  %23 = sext i32 %22 to i64
  %24 = icmp ugt i64 %23, 8
  br i1 %24, label %25, label %28

25:                                               ; preds = %7
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %27 = call i32 @vfslog_flush(%struct.TYPE_3__* %26)
  br label %28

28:                                               ; preds = %25, %7
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = load i32*, i32** %30, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %31, i64 %35
  %37 = bitcast i32* %36 to i8*
  store i8* %37, i8** %16, align 8
  %38 = load i8*, i8** %16, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 0
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @put32bits(i8* %39, i32 %40)
  %42 = load i8*, i8** %16, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 4
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @put32bits(i8* %43, i32 %44)
  %46 = load i8*, i8** %16, align 8
  %47 = getelementptr inbounds i8, i8* %46, i64 8
  %48 = load i32, i32* %11, align 4
  %49 = and i32 %48, 65535
  %50 = call i32 @put32bits(i8* %47, i32 %49)
  %51 = load i8*, i8** %16, align 8
  %52 = getelementptr inbounds i8, i8* %51, i64 12
  %53 = load i32, i32* %12, align 4
  %54 = call i32 @put32bits(i8* %52, i32 %53)
  %55 = load i8*, i8** %16, align 8
  %56 = getelementptr inbounds i8, i8* %55, i64 16
  %57 = load i32, i32* %13, align 4
  %58 = call i32 @put32bits(i8* %56, i32 %57)
  %59 = load i8*, i8** %16, align 8
  %60 = getelementptr inbounds i8, i8* %59, i64 20
  %61 = load i32, i32* %14, align 4
  %62 = call i32 @put32bits(i8* %60, i32 %61)
  %63 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %64 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  %66 = add nsw i32 %65, 24
  store i32 %66, i32* %64, align 8
  ret void
}

declare dso_local i32 @vfslog_flush(%struct.TYPE_3__*) #1

declare dso_local i32 @put32bits(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
